docs: prepare v1.0 RC1 release documentation
Co-authored-by: Cursor <cursoragent@cursor.com>